--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:exifinterface:28.0.0'
+    implementation "com.android.support:appcompat-v7:$recyclerView_version"
+    implementation "com.android.support:exifinterface:$recyclerView_version"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation "com.android.support:recyclerview-v7:$recyclerView_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -50,8 +50,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$gson_version"
 
     // Dagger 2
-    implementation "com.google.dagger:dagger:2.14.1"
-    kapt "com.google.dagger:dagger-compiler:2.14.1"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
     compileOnly "org.glassfish:javax.annotation:3.1.1"
 
     //Rx
@@ -62,6 +62,6 @@ dependencies {
     annotationProcessor "com.android.databinding:compiler:$databinding_version"
 
     //Picasso
-    implementation "com.squareup.picasso:picasso:2.71828"
+    implementation "com.squareup.picasso:picasso:$picasso_version"
 
 }
